Version 1.0.0 released August 25, 2020

    - Initial release